--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "JoseChan/Pager",
+  "name": "jose-chan/pager",
   "type": "project",
   "license": "LGPL",
   "minimum-stability": "stable",
