--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "jose-chan/pager",
   "type": "project",
-  "license": "LGPL",
+  "license": "LGPL-3.0-only",
   "minimum-stability": "stable",
   "keywords": [
     "Pager"
